--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author: Mattia Crovero <mcrovero@gmail.com>
 homepage: https://github.com/mcrovero/flutter_interactive_keyboard
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
